--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
           - 4444:4444
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -34,7 +34,8 @@ jobs:
 
     - name: Start Flask app in background
       run: |
-        nohup flask run --host=0.0.0.0 &
+        cd web
+        nohup python app_web.py &
 
     - name: Wait for server
       run: sleep 5
@@ -43,10 +44,10 @@ jobs:
       env:
         SELENIUM_REMOTE_URL: http://localhost:4444/wd/hub
       run: |
-        pytest tests/test_selenium.py --junitxml=results/selenium-tests.xml
+        python tests/test_app_web.py
 
     - name: Upload Test Reports
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: test-reports
         path: results/
