--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,33 @@ on:
     branches: [main]
 
 jobs:
-  test:
+  unit-tests:
     runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
 
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.11
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flask pytest selenium webdriver-manager
+
+    - name: Run unit tests with pytest
+      run: pytest tests/test_calculatrice.py --junitxml=results/unit-tests.xml
+
+    - name: Upload Test Reports
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-reports
+        path: results/
+
+  selenium-tests:
+    runs-on: ubuntu-latest
+    needs: unit-tests
     services:
       selenium:
         image: selenium/standalone-chrome
@@ -29,25 +53,22 @@ jobs:
         python -m pip install --upgrade pip
         pip install flask pytest selenium webdriver-manager
 
-    - name: Run unit tests with pytest
-      run: pytest tests --junitxml=results/unit-tests.xml
-
     - name: Start Flask app in background
       run: |
         cd web
-        nohup python app_web.py &
+        nohup python app_web.py > app.log 2>&1 &
 
     - name: Wait for server
-      run: sleep 5
+      run: |
+        sleep 10
+        curl -f http://localhost:5000 || (echo "Server not ready" && cat app.log && exit 1)
 
     - name: Run Selenium tests
-      env:
-        SELENIUM_REMOTE_URL: http://localhost:4444/wd/hub
       run: |
         python tests/test_app_web.py
 
     - name: Upload Test Reports
       uses: actions/upload-artifact@v4
       with:
-        name: test-reports
+        name: selenium-test-reports
         path: results/
